--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h3>site do Matheus </h3>
     <h4> Colégio REni </h4>
     <h5> Programação I </h5>
+    <hr>
+    <h1> meus jogos  favoritos </h1>
+    <h2> roblox, clash royale </h2>
+
 </body>
 </html>
