--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
     <h1> meus jogos  favoritos </h1>
     <h2> roblox, clash royale </h2>
 
+
+<section> <class="content">
+
+  <p> roblox é um jogo que as pessoas criam outros jogos dentro da plataforma, assim deixando jogo difente</p>
+<img src="roblox.jpg" alt="">
+</section>
 </body>
 </html>
