--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <p> roblox é um jogo que as pessoas criam outros jogos dentro da plataforma, assim deixando jogo difente</p>
 <img src="roblox.jpg" alt="">
+<img src="clashroyale" alt="">
 </section>
 </body>
 </html>
